--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,6 @@ body {
     border-radius: 100%;
 }
 
-
 .circular--main .inner--main {
     height: 14vh;
     width: 14vh;
@@ -361,9 +360,12 @@ body {
 .tags {
     padding: 6px;
     background-color: var(--light-blue);
-    margin: 2px;
+    margin: 2px 2px 20px 2px;
     border-radius: 10px;
+    line-height: 2.5rem;
 }
+
+.project-technology--heading {margin-bottom: 10px;}
 
 .display-content { margin: 10px 0 0 0;}
 .progress{justify-content: space-between; align-items: center;}
